--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build": "npm run build:src && npm run build:diagrams && npm run build:tsdoc",
     "build:src": "tsc",
     "build:diagrams": "puml generate --png --output=docs/classes.png docs/classes.puml",
-    "build:tsdoc": "tsdoc"
+    "build:tsdoc": "typedoc --out docs/tsdoc/"
   },
   "husky": {
     "hooks": {
@@ -27,9 +27,9 @@
     "node-plantuml": "^0.8.1",
     "standard": "^12.0.1",
     "ts-jest": "^24.0.2",
-    "tsdoc": "0.0.4",
     "tslint": "^5.17.0",
     "tslint-config-standard": "^8.0.1",
+    "typedoc": "^0.14.2",
     "typescript": "^3.4.5"
   },
   "repository": {
