--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,8 @@
 {
   "compilerOptions": {
     "target":"ES6",
+    "resolveJsonModule": true,
+    "esModuleInterop": true,
     "module": "commonjs",
     "lib": ["es2015"],
     "strict": true,
@@ -11,7 +13,7 @@
   },
   "exclude": [
     "node_modules",
-    "src/**/*.test.ts",
+    "src/test",
     "./dist/"
   ]
 }
